[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/grey circle.png" type="Texture" id=1]
[ext_resource path="res://assets/darker grey circle.png" type="Texture" id=2]
[ext_resource path="res://assets/timer.png" type="Texture" id=3]
[ext_resource path="res://assets/face.png" type="Texture" id=4]
[ext_resource path="res://scripts/MapEvents/MapNode.gd" type="Script" id=5]

[node name="map_node_001" type="TextureButton" groups=["save_me", "to_be_saved"]]
margin_right = 50.0
margin_bottom = 50.0
expand = true
script = ExtResource( 5 )

[node name="events_lists" type="Node" parent="."]

[node name="events_list1" type="Node" parent="events_lists"]

[node name="reached_sprite" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
expand = true

[node name="unlocked_sprite" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="finished_sprite" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="ow_node_sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 49, 27 )
texture = ExtResource( 4 )

[node name="reward_timer_label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -4.0
margin_top = 6.0
margin_right = 80.0
margin_bottom = 20.0
text = "reward_timer"

[node name="Sprite" type="Sprite" parent="reward_timer_label"]
position = Vector2( -13, 5 )
texture = ExtResource( 3 )
